E03测试良好，需优化页面布局

--- a/app/src/main/res/layout/food_recycle_view_item.xml
+++ b/app/src/main/res/layout/food_recycle_view_item.xml
@@ -23,8 +23,7 @@
         android:id="@+id/food_order_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        android:text="@string/food_order"/>
+        android:layout_marginRight="10dp" />
 
 
 </LinearLayout>
