--- a/app/src/main/res/layout/fragment_not_order_food.xml
+++ b/app/src/main/res/layout/fragment_not_order_food.xml
@@ -28,7 +28,8 @@
         <Button
             android:id="@+id/commit_acount_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="@string/commit_acount"/>
     </LinearLayout>
 
 
