--- a/app/src/main/res/layout/activity_food_detailed.xml
+++ b/app/src/main/res/layout/activity_food_detailed.xml
@@ -8,13 +8,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="horizontal"
     tools:context="es.source.code.activity.FoodDetailed">
 
-    <android.support.v7.app.AlertController.RecycleListView
+
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/food_detailed_recycle_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"/>
 
-    </android.support.v7.app.AlertController.RecycleListView>
+
 
 </LinearLayout>
