--- a/app/src/main/res/layout/activity_login_or_register.xml
+++ b/app/src/main/res/layout/activity_login_or_register.xml
@@ -109,8 +109,7 @@
         android:layout_centerInParent="true"
         android:indeterminate="true"
         android:visibility="gone"
-        style="@style/Widget.AppCompat.ProgressBar"
-        />
+        style="@style/Widget.AppCompat.ProgressBar" />
     <!--style="@style/myProgressBarLoginStyle"-->
 
 </RelativeLayout>
