--- a/app/src/main/res/layout/fragment_odered_food.xml
+++ b/app/src/main/res/layout/fragment_odered_food.xml
@@ -29,7 +29,8 @@
     <Button
         android:id="@+id/check_out_acount_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/check_out_acount"/>
     </LinearLayout>
 
 </FrameLayout>
