E05-5,不过-4-02 FoodView更新菜品项信息没有思路

--- a/app/src/main/res/layout/food_recycle_view_item.xml
+++ b/app/src/main/res/layout/food_recycle_view_item.xml
@@ -19,6 +19,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"/>
+    <TextView
+        android:id="@+id/food_stock_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"/>
     <Button
         android:id="@+id/food_order_button"
         android:layout_width="wrap_content"
