--- a/app/src/main/res/layout/food_detailed_item.xml
+++ b/app/src/main/res/layout/food_detailed_item.xml
@@ -44,10 +44,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <EditText
+        <TextView
             android:id="@+id/remarks_edit"
-            android:hint="备注:"
-            android:inputType="textMultiLine"
+            android:text="@string/remarks"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
