基本完成，实时更新和开机自启动待测试

--- a/app/src/main/res/layout/food_ordered_recycle_view_item.xml
+++ b/app/src/main/res/layout/food_ordered_recycle_view_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <!--已下单菜子项--><!--图片、菜名、价格、数量、备注-->
@@ -9,28 +9,32 @@
     <ImageView
         android:id="@+id/food_ordered_image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_logo"
+        android:layout_weight="1"/>
     <TextView
         android:id="@+id/food_ordered_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"/>
+        android:layout_weight="2"/>
     <TextView
         android:id="@+id/food_ordered_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"/>
+        android:layout_gravity="center_vertical"
+        android:layout_weight="2"/>
     <TextView
         android:id="@+id/food_ordered_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"/>
+        android:layout_gravity="center_vertical"
+        android:layout_weight="2"/>
     <TextView
         android:id="@+id/food_ordered_remarks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_gravity="right|center"
         android:text="备注"/>
 
 </LinearLayout>
