--- a/app/src/main/res/layout/activity_food_order_view.xml
+++ b/app/src/main/res/layout/activity_food_order_view.xml
@@ -21,12 +21,13 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             app:tabSelectedTextColor="@color/colorRed"
-            app:tabMode="scrollable"/>
+            app:tabMode="fixed"/>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/food_order_view_pager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
 
 
     </LinearLayout>
