--- a/app/src/main/res/layout/food_detailed_item.xml
+++ b/app/src/main/res/layout/food_detailed_item.xml
@@ -7,12 +7,14 @@
     <!--菜图片、菜名、菜价、备注输入框、点菜按钮-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical">
         <ImageView
             android:id="@+id/food_detailed_image"
-            android:layout_gravity="center"
+            android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_logo" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,10 +45,12 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
+        android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
+        <EditText
             android:id="@+id/remarks_edit"
-            android:text="@string/remarks"
+            android:hint="@string/remarks"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
