--- a/app/src/main/res/layout/food_not_order_recycle_view_item.xml
+++ b/app/src/main/res/layout/food_not_order_recycle_view_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <!--已下单菜子项--><!--图片、菜名、价格、数量、备注、退点-->
@@ -9,32 +9,38 @@
     <ImageView
         android:id="@+id/food_not_order_image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_logo"
+        android:layout_weight="1"/>
     <TextView
         android:id="@+id/food_not_order_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"/>
+        android:layout_weight="2"/>
     <TextView
         android:id="@+id/food_not_order_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"/>
+        android:layout_gravity="center_vertical"
+        android:layout_weight="2"/>
     <TextView
         android:id="@+id/food_not_order_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"/>
+        android:layout_gravity="center_vertical"
+        android:layout_weight="2"
+        android:text="1"/>
     <TextView
         android:id="@+id/food_not_order_remarks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="2"
         android:text="备注"/>
     <Button
         android:id="@+id/food_not_order_button"
-        android:layout_marginRight="10dp"
+        android:layout_gravity="right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/food_no_order"/>
