--- a/app/src/main/res/layout/food_recycle_view_item.xml
+++ b/app/src/main/res/layout/food_recycle_view_item.xml
@@ -1,35 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/food_image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_logo"
+        android:layout_weight="1"/>
     <TextView
         android:id="@+id/food_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"/>
+        android:layout_weight="2"/>
     <TextView
         android:id="@+id/food_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"/>
+        android:layout_gravity="center_vertical"
+        android:layout_weight="2"/>
     <TextView
         android:id="@+id/food_stock_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="2"/>
     <Button
         android:id="@+id/food_order_button"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="10dp" />
+        android:layout_width="wrap_content"
+        android:layout_gravity="right" />
 
 
 </LinearLayout>
