--- a/app/src/main/res/layout/fragment_cold_food.xml
+++ b/app/src/main/res/layout/fragment_cold_food.xml
@@ -1,14 +1,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context="es.source.code.activity.ColdFoodFragment">
 
     <!--加载指定类型的菜品-->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/cold_food_recycle_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>
 
 
