--- a/app/src/main/res/layout/fragment_not_order_food.xml
+++ b/app/src/main/res/layout/fragment_not_order_food.xml
@@ -1,36 +1,45 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="es.source.code.activity.NotOrderFoodFragment">
 
     <!--加载未下单菜（已点但未生成订单菜品）-->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/not_order_food_recycle_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_weight="1">
     </android.support.v7.widget.RecyclerView>
     <!--显示菜品总数、订单总价、提交订单按钮-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_gravity="bottom"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/food_number_not_text_view"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:gravity="bottom"/>
         <TextView
             android:id="@+id/account_total_price_not_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp" />
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:gravity="bottom"/>
         <Button
             android:id="@+id/commit_acount_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="right|bottom"
             android:text="@string/commit_acount"/>
     </LinearLayout>
 
 
-</FrameLayout>
+</LinearLayout>
