--- a/app/src/main/res/layout/fragment_odered_food.xml
+++ b/app/src/main/res/layout/fragment_odered_food.xml
@@ -1,35 +1,42 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="es.source.code.activity.OrderedFoodFragment">
 
     <!--加载已下单菜（但未结账）-->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/ordered_food_recycle_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_weight="1">
     </android.support.v7.widget.RecyclerView>
 
     <!--显示菜品总数、订单总价、结账按钮-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_gravity="bottom"
         android:orientation="horizontal">
     <TextView
         android:id="@+id/food_number_ordered_text_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"/>
     <TextView
         android:id="@+id/account_total_price_ordered_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp" />
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"/>
     <Button
         android:id="@+id/check_out_acount_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_gravity="right|bottom"
         android:text="@string/check_out_acount"/>
     </LinearLayout>
     <ProgressBar
@@ -42,4 +49,4 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_gravity="center"/>
 
-</FrameLayout>
+</LinearLayout>
