--- a/app/src/main/res/layout/fragment_wine.xml
+++ b/app/src/main/res/layout/fragment_wine.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context="es.source.code.activity.WineFragment">
 
 
@@ -9,6 +9,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/wine_recycle_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>
 </FrameLayout>
