--- a/app/src/main/res/layout/notification_layout.xml
+++ b/app/src/main/res/layout/notification_layout.xml
@@ -2,19 +2,43 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFAADD">
+    android:layout_height="match_parent">
 
 
-    <TextView
-        android:id="@+id/notification_text_view"
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@mipmap/ic_logo"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"/>
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/notification_new_food"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/notification_new_food"
+            android:textColor="@color/colorWhite"/>
+        <TextView
+            android:id="@+id/notification_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorWhite"
+            android:layout_below="@+id/notification_new_food"/>
+
+
+    </RelativeLayout>
+
     <Button
         android:id="@+id/notification_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
         android:text="@string/notification_cancel"/>
 
 </LinearLayout>
